// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Compile Handle duplicates Compiler with \`unreachableDefinitions\` option working correctly 1`] = `
"
export type A1GetParams = ("production" | "staging" | "development" | "test")

export type Mode = number

export type Mode1 = string

export type Mode2 = string

export type Mode3 = ("production" | "staging" | "development" | "test")

export interface API {
"/a": {
GET: A1Get
}
"/b": {
GET: B1Get
}
"/c": {
GET: C1Get
}
"/d": {
GET: D1Get
}
}

export interface A1Get {
Params: A1GetParams
}

export interface B1Get {
Params: Mode
}

export interface C1Get {
Params: Mode1
}

export interface D1Get {
Params: Mode2
}

/**
 * This interface was referenced by \`API\`'s JSON-Schema
 * via the \`definition\` "enums".
 */
export interface Enums {
mode: Mode3
}
"
`;

exports[`Compile Handle duplicates Compiler working correctly 1`] = `
"
export type AGetParams = ("production" | "staging" | "development" | "test")

export type Mode = number

export type Mode1 = string

export type Mode2 = string

export interface API {
"/a": {
GET: AGet
}
"/b": {
GET: BGet
}
"/c": {
GET: CGet
}
"/d": {
GET: DGet
}
}

export interface AGet {
Params: AGetParams
}

export interface BGet {
Params: Mode
}

export interface CGet {
Params: Mode1
}

export interface DGet {
Params: Mode2
}
"
`;

exports[`Compile Handle refs Compiler with \`unreachableDefinitions\` option working correctly 1`] = `
"
export type RootGetParams = ("production" | "staging" | "development" | "test")

export type RootGetReply = Mode

export type Mode = ("production" | "staging" | "development" | "test")

export interface API {
"/": {
GET: RootGet
}
}

export interface RootGet {
Params: RootGetParams
Reply: RootGetReply
}

/**
 * This interface was referenced by \`API\`'s JSON-Schema
 * via the \`definition\` "enums".
 */
export interface Enums {
mode: Mode
}
"
`;

exports[`Compile Handle refs Compiler working correctly 1`] = `
"
export type RootGetParams = ("production" | "staging" | "development" | "test")

export type RootGetReply = Mode

export type Mode = ("production" | "staging" | "development" | "test")

export interface API {
"/": {
GET: RootGet
}
}

export interface RootGet {
Params: RootGetParams
Reply: RootGetReply
}
"
`;

exports[`Transform root level Transformer works correctly 1`] = `
{
  "/bar": {
    "additionalProperties": false,
    "properties": {
      "DELETE": {
        "additionalProperties": false,
        "description": undefined,
        "properties": {
          "Headers": {
            "additionalProperties": false,
            "properties": {},
            "required": [],
            "title": "BarDeleteHeaders",
            "type": "object",
          },
          "Params": {
            "additionalProperties": false,
            "properties": {},
            "required": [],
            "title": "BarDeleteParams",
            "type": "object",
          },
          "Querystring": {
            "additionalProperties": false,
            "properties": {},
            "required": [],
            "title": "BarDeleteQuerystring",
            "type": "object",
          },
          "Reply": {
            "additionalProperties": false,
            "oneOf": [
              {
                "additionalProperties": false,
                "properties": {},
                "required": [],
                "title": "BarDeleteReplyStatus200",
                "type": "object",
              },
            ],
            "properties": undefined,
            "required": undefined,
            "title": "BarDeleteReply",
            "type": "object",
          },
        },
        "required": [
          "Querystring",
          "Params",
          "Headers",
          "Reply",
        ],
        "title": "BarDelete",
        "type": "object",
      },
      "GET": {
        "additionalProperties": false,
        "description": undefined,
        "properties": {
          "Headers": {
            "additionalProperties": false,
            "properties": {},
            "required": [],
            "title": "BarGetHeaders",
            "type": "object",
          },
          "Params": {
            "additionalProperties": false,
            "properties": {},
            "required": [],
            "title": "BarGetParams",
            "type": "object",
          },
          "Querystring": {
            "additionalProperties": false,
            "properties": {},
            "required": [],
            "title": "BarGetQuerystring",
            "type": "object",
          },
          "Reply": {
            "additionalProperties": false,
            "oneOf": [
              {
                "additionalProperties": false,
                "properties": {},
                "required": [],
                "title": "BarGetReplyStatus200",
                "type": "object",
              },
            ],
            "properties": undefined,
            "required": undefined,
            "title": "BarGetReply",
            "type": "object",
          },
        },
        "required": [
          "Querystring",
          "Params",
          "Headers",
          "Reply",
        ],
        "title": "BarGet",
        "type": "object",
      },
      "HEAD": {
        "additionalProperties": false,
        "description": undefined,
        "properties": {
          "Headers": {
            "additionalProperties": false,
            "properties": {},
            "required": [],
            "title": "BarHeadHeaders",
            "type": "object",
          },
          "Params": {
            "additionalProperties": false,
            "properties": {},
            "required": [],
            "title": "BarHeadParams",
            "type": "object",
          },
          "Querystring": {
            "additionalProperties": false,
            "properties": {},
            "required": [],
            "title": "BarHeadQuerystring",
            "type": "object",
          },
          "Reply": {
            "additionalProperties": false,
            "oneOf": [
              {
                "additionalProperties": false,
                "properties": {},
                "required": [],
                "title": "BarHeadReplyStatus200",
                "type": "object",
              },
            ],
            "properties": undefined,
            "required": undefined,
            "title": "BarHeadReply",
            "type": "object",
          },
        },
        "required": [
          "Querystring",
          "Params",
          "Headers",
          "Reply",
        ],
        "title": "BarHead",
        "type": "object",
      },
      "OPTIONS": {
        "additionalProperties": false,
        "description": undefined,
        "properties": {
          "Headers": {
            "additionalProperties": false,
            "properties": {},
            "required": [],
            "title": "BarOptionsHeaders",
            "type": "object",
          },
          "Params": {
            "additionalProperties": false,
            "properties": {},
            "required": [],
            "title": "BarOptionsParams",
            "type": "object",
          },
          "Querystring": {
            "additionalProperties": false,
            "properties": {},
            "required": [],
            "title": "BarOptionsQuerystring",
            "type": "object",
          },
          "Reply": {
            "additionalProperties": false,
            "oneOf": [
              {
                "additionalProperties": false,
                "properties": {},
                "required": [],
                "title": "BarOptionsReplyStatus200",
                "type": "object",
              },
            ],
            "properties": undefined,
            "required": undefined,
            "title": "BarOptionsReply",
            "type": "object",
          },
        },
        "required": [
          "Querystring",
          "Params",
          "Headers",
          "Reply",
        ],
        "title": "BarOptions",
        "type": "object",
      },
      "PATCH": {
        "additionalProperties": false,
        "description": undefined,
        "properties": {
          "Body": {
            "additionalProperties": false,
            "properties": {},
            "required": [],
            "title": "BarPatchBody",
            "type": "object",
          },
          "Headers": {
            "additionalProperties": false,
            "properties": {},
            "required": [],
            "title": "BarPatchHeaders",
            "type": "object",
          },
          "Params": {
            "additionalProperties": false,
            "properties": {},
            "required": [],
            "title": "BarPatchParams",
            "type": "object",
          },
          "Querystring": {
            "additionalProperties": false,
            "properties": {},
            "required": [],
            "title": "BarPatchQuerystring",
            "type": "object",
          },
          "Reply": {
            "additionalProperties": false,
            "oneOf": [
              {
                "additionalProperties": false,
                "properties": {},
                "required": [],
                "title": "BarPatchReplyStatus200",
                "type": "object",
              },
            ],
            "properties": undefined,
            "required": undefined,
            "title": "BarPatchReply",
            "type": "object",
          },
        },
        "required": [
          "Body",
          "Querystring",
          "Params",
          "Headers",
          "Reply",
        ],
        "title": "BarPatch",
        "type": "object",
      },
      "POST": {
        "additionalProperties": false,
        "description": undefined,
        "properties": {
          "Body": {
            "additionalProperties": false,
            "properties": {},
            "required": [],
            "title": "BarPostBody",
            "type": "object",
          },
          "Headers": {
            "additionalProperties": false,
            "properties": {},
            "required": [],
            "title": "BarPostHeaders",
            "type": "object",
          },
          "Params": {
            "additionalProperties": false,
            "properties": {},
            "required": [],
            "title": "BarPostParams",
            "type": "object",
          },
          "Querystring": {
            "additionalProperties": false,
            "properties": {},
            "required": [],
            "title": "BarPostQuerystring",
            "type": "object",
          },
          "Reply": {
            "additionalProperties": false,
            "oneOf": [
              {
                "additionalProperties": false,
                "properties": {},
                "required": [],
                "title": "BarPostReplyStatus200",
                "type": "object",
              },
            ],
            "properties": undefined,
            "required": undefined,
            "title": "BarPostReply",
            "type": "object",
          },
        },
        "required": [
          "Body",
          "Querystring",
          "Params",
          "Headers",
          "Reply",
        ],
        "title": "BarPost",
        "type": "object",
      },
      "PUT": {
        "additionalProperties": false,
        "description": undefined,
        "properties": {
          "Body": {
            "additionalProperties": false,
            "properties": {},
            "required": [],
            "title": "BarPutBody",
            "type": "object",
          },
          "Headers": {
            "additionalProperties": false,
            "properties": {},
            "required": [],
            "title": "BarPutHeaders",
            "type": "object",
          },
          "Params": {
            "additionalProperties": false,
            "properties": {},
            "required": [],
            "title": "BarPutParams",
            "type": "object",
          },
          "Querystring": {
            "additionalProperties": false,
            "properties": {},
            "required": [],
            "title": "BarPutQuerystring",
            "type": "object",
          },
          "Reply": {
            "additionalProperties": false,
            "oneOf": [
              {
                "additionalProperties": false,
                "properties": {},
                "required": [],
                "title": "BarPutReplyStatus200",
                "type": "object",
              },
            ],
            "properties": undefined,
            "required": undefined,
            "title": "BarPutReply",
            "type": "object",
          },
        },
        "required": [
          "Body",
          "Querystring",
          "Params",
          "Headers",
          "Reply",
        ],
        "title": "BarPut",
        "type": "object",
      },
    },
    "required": [
      "DELETE",
      "GET",
      "HEAD",
      "OPTIONS",
      "PATCH",
      "POST",
      "PUT",
    ],
    "title": undefined,
    "type": "object",
  },
  "/foo": {
    "additionalProperties": false,
    "properties": {
      "DELETE": {
        "additionalProperties": false,
        "description": undefined,
        "properties": {
          "Headers": {
            "additionalProperties": false,
            "properties": {},
            "required": [],
            "title": "FooDeleteHeaders",
            "type": "object",
          },
          "Params": {
            "additionalProperties": false,
            "properties": {},
            "required": [],
            "title": "FooDeleteParams",
            "type": "object",
          },
          "Querystring": {
            "additionalProperties": false,
            "properties": {},
            "required": [],
            "title": "FooDeleteQuerystring",
            "type": "object",
          },
          "Reply": {
            "additionalProperties": false,
            "oneOf": [
              {
                "additionalProperties": false,
                "properties": {},
                "required": [],
                "title": "FooDeleteReplyStatus200",
                "type": "object",
              },
            ],
            "properties": undefined,
            "required": undefined,
            "title": "FooDeleteReply",
            "type": "object",
          },
        },
        "required": [
          "Querystring",
          "Params",
          "Headers",
          "Reply",
        ],
        "title": "FooDelete",
        "type": "object",
      },
      "GET": {
        "additionalProperties": false,
        "description": undefined,
        "properties": {
          "Headers": {
            "additionalProperties": false,
            "properties": {},
            "required": [],
            "title": "FooGetHeaders",
            "type": "object",
          },
          "Params": {
            "additionalProperties": false,
            "properties": {},
            "required": [],
            "title": "FooGetParams",
            "type": "object",
          },
          "Querystring": {
            "additionalProperties": false,
            "properties": {},
            "required": [],
            "title": "FooGetQuerystring",
            "type": "object",
          },
          "Reply": {
            "additionalProperties": false,
            "oneOf": [
              {
                "additionalProperties": false,
                "properties": {},
                "required": [],
                "title": "FooGetReplyStatus200",
                "type": "object",
              },
            ],
            "properties": undefined,
            "required": undefined,
            "title": "FooGetReply",
            "type": "object",
          },
        },
        "required": [
          "Querystring",
          "Params",
          "Headers",
          "Reply",
        ],
        "title": "FooGet",
        "type": "object",
      },
      "HEAD": {
        "additionalProperties": false,
        "description": undefined,
        "properties": {
          "Headers": {
            "additionalProperties": false,
            "properties": {},
            "required": [],
            "title": "FooHeadHeaders",
            "type": "object",
          },
          "Params": {
            "additionalProperties": false,
            "properties": {},
            "required": [],
            "title": "FooHeadParams",
            "type": "object",
          },
          "Querystring": {
            "additionalProperties": false,
            "properties": {},
            "required": [],
            "title": "FooHeadQuerystring",
            "type": "object",
          },
          "Reply": {
            "additionalProperties": false,
            "oneOf": [
              {
                "additionalProperties": false,
                "properties": {},
                "required": [],
                "title": "FooHeadReplyStatus200",
                "type": "object",
              },
            ],
            "properties": undefined,
            "required": undefined,
            "title": "FooHeadReply",
            "type": "object",
          },
        },
        "required": [
          "Querystring",
          "Params",
          "Headers",
          "Reply",
        ],
        "title": "FooHead",
        "type": "object",
      },
      "OPTIONS": {
        "additionalProperties": false,
        "description": undefined,
        "properties": {
          "Headers": {
            "additionalProperties": false,
            "properties": {},
            "required": [],
            "title": "FooOptionsHeaders",
            "type": "object",
          },
          "Params": {
            "additionalProperties": false,
            "properties": {},
            "required": [],
            "title": "FooOptionsParams",
            "type": "object",
          },
          "Querystring": {
            "additionalProperties": false,
            "properties": {},
            "required": [],
            "title": "FooOptionsQuerystring",
            "type": "object",
          },
          "Reply": {
            "additionalProperties": false,
            "oneOf": [
              {
                "additionalProperties": false,
                "properties": {},
                "required": [],
                "title": "FooOptionsReplyStatus200",
                "type": "object",
              },
            ],
            "properties": undefined,
            "required": undefined,
            "title": "FooOptionsReply",
            "type": "object",
          },
        },
        "required": [
          "Querystring",
          "Params",
          "Headers",
          "Reply",
        ],
        "title": "FooOptions",
        "type": "object",
      },
      "PATCH": {
        "additionalProperties": false,
        "description": undefined,
        "properties": {
          "Body": {
            "additionalProperties": false,
            "properties": {},
            "required": [],
            "title": "FooPatchBody",
            "type": "object",
          },
          "Headers": {
            "additionalProperties": false,
            "properties": {},
            "required": [],
            "title": "FooPatchHeaders",
            "type": "object",
          },
          "Params": {
            "additionalProperties": false,
            "properties": {},
            "required": [],
            "title": "FooPatchParams",
            "type": "object",
          },
          "Querystring": {
            "additionalProperties": false,
            "properties": {},
            "required": [],
            "title": "FooPatchQuerystring",
            "type": "object",
          },
          "Reply": {
            "additionalProperties": false,
            "oneOf": [
              {
                "additionalProperties": false,
                "properties": {},
                "required": [],
                "title": "FooPatchReplyStatus200",
                "type": "object",
              },
            ],
            "properties": undefined,
            "required": undefined,
            "title": "FooPatchReply",
            "type": "object",
          },
        },
        "required": [
          "Body",
          "Querystring",
          "Params",
          "Headers",
          "Reply",
        ],
        "title": "FooPatch",
        "type": "object",
      },
      "POST": {
        "additionalProperties": false,
        "description": undefined,
        "properties": {
          "Body": {
            "additionalProperties": false,
            "properties": {},
            "required": [],
            "title": "FooPostBody",
            "type": "object",
          },
          "Headers": {
            "additionalProperties": false,
            "properties": {},
            "required": [],
            "title": "FooPostHeaders",
            "type": "object",
          },
          "Params": {
            "additionalProperties": false,
            "properties": {},
            "required": [],
            "title": "FooPostParams",
            "type": "object",
          },
          "Querystring": {
            "additionalProperties": false,
            "properties": {},
            "required": [],
            "title": "FooPostQuerystring",
            "type": "object",
          },
          "Reply": {
            "additionalProperties": false,
            "oneOf": [
              {
                "additionalProperties": false,
                "properties": {},
                "required": [],
                "title": "FooPostReplyStatus200",
                "type": "object",
              },
            ],
            "properties": undefined,
            "required": undefined,
            "title": "FooPostReply",
            "type": "object",
          },
        },
        "required": [
          "Body",
          "Querystring",
          "Params",
          "Headers",
          "Reply",
        ],
        "title": "FooPost",
        "type": "object",
      },
      "PUT": {
        "additionalProperties": false,
        "description": undefined,
        "properties": {
          "Body": {
            "additionalProperties": false,
            "properties": {},
            "required": [],
            "title": "FooPutBody",
            "type": "object",
          },
          "Headers": {
            "additionalProperties": false,
            "properties": {},
            "required": [],
            "title": "FooPutHeaders",
            "type": "object",
          },
          "Params": {
            "additionalProperties": false,
            "properties": {},
            "required": [],
            "title": "FooPutParams",
            "type": "object",
          },
          "Querystring": {
            "additionalProperties": false,
            "properties": {},
            "required": [],
            "title": "FooPutQuerystring",
            "type": "object",
          },
          "Reply": {
            "additionalProperties": false,
            "oneOf": [
              {
                "additionalProperties": false,
                "properties": {},
                "required": [],
                "title": "FooPutReplyStatus200",
                "type": "object",
              },
            ],
            "properties": undefined,
            "required": undefined,
            "title": "FooPutReply",
            "type": "object",
          },
        },
        "required": [
          "Body",
          "Querystring",
          "Params",
          "Headers",
          "Reply",
        ],
        "title": "FooPut",
        "type": "object",
      },
    },
    "required": [
      "DELETE",
      "GET",
      "HEAD",
      "OPTIONS",
      "PATCH",
      "POST",
      "PUT",
    ],
    "title": undefined,
    "type": "object",
  },
}
`;
